Panels z-index fixes

--- a/edit-review/extended-filters/style/style.less
+++ b/edit-review/extended-filters/style/style.less
@@ -356,6 +356,7 @@ h1 {
   top: 100%;
   right:-1px;
   padding-top:8px;
+  z-index:100;
   label {
     color: #54595D;
     display:flex;
@@ -416,6 +417,7 @@ h1 {
   top: 100%;
   right:-1px;
   padding-top:8px;
+  z-index:100;
   label {
     color: #54595D;
     display:flex;
@@ -1302,7 +1304,8 @@ margin: 0 20px;
 
   .show-settings {
     .dropdown;
-    margin-right: 16px;
+    margin-right: auto;
+    margin-left:0;
     &.active {
       color: white;
       background-color: #2A4B8D;
